--- a/gb/20/7/15/n12257361.md
+++ b/gb/20/7/15/n12257361.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kvokyz384/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kvokyz384/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kvokyz384/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kvokyz384/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>培训流浪犬开发特殊儿童潜能  桃园新创团队赞</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/0a70361afd98643d91b280ff3ba347e6-600x400.jpg" />
 <h6>训练流浪犬成为合格专业疗育犬，帮助妥瑞症、亚斯伯格、情绪障碍及学习障碍的孩童认识自我、开发潜能。（桃园青年事务局提供）
 </h6>
 <hr>
-<p>【大纪元2020年07月15日讯】（大纪元记者徐乃义台湾桃园报导）桃园青年事务局青创指挥部辅导的新创团队—台湾心辅犬培育团队，与桃园联新国际医院联手合办“<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E5%84%BF%E7%AB%A5.md#1">特殊儿童</a><ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E6%BD%9C%E8%83%BD%E5%BC%80%E5%8F%91.md#1">潜能开发</a>课程”，训练<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E7%8A%AC.md#1">流浪犬</a>成为合格专业疗育犬，帮助妥瑞症、亚斯伯格、情绪障碍及学习障碍的孩童认识自我、开发潜能。</p>
-<figure id="attachment_12257366" aria-describedby="caption-attachment-12257366" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/eb49c352a540c026655880793863175a.jpg"><img class="wp-image-12257366 size-large" src="https://i.epochtimes.com/assets/uploads/2020/07/eb49c352a540c026655880793863175a-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-12257366" class="wp-caption-text">训练<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E7%8A%AC.md#1">流浪犬</a>成为合格专业疗育犬，帮助妥瑞症、亚斯伯格、情绪障碍及学习障碍的孩童认识自我、开发潜能。（桃园青年事务局提供）</figcaption></figure>
-<p>台湾心辅犬培育团队于2019年7月成立，是全台唯一透过专业互动陪伴犬疗育银发与<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E5%84%BF%E7%AB%A5.md#1">特殊儿童</a>的团队，负责人陈奕君说，团队从成立以来投入特殊儿童教育，对特殊孩童的协助不遗余力，这次与联新医院及唯妥社会企业公司共同合作，希望透过心辅犬互动教育，帮助特殊儿童发展未来。</p>
+<p>【大纪元2020年07月15日讯】（大纪元记者徐乃义台湾桃园报导）桃园青年事务局青创指挥部辅导的新创团队—台湾心辅犬培育团队，与桃园联新国际医院联手合办“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E5%84%BF%E7%AB%A5.md#1">特殊儿童</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BD%9C%E8%83%BD%E5%BC%80%E5%8F%91.md#1">潜能开发</a>课程”，训练<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E7%8A%AC.md#1">流浪犬</a>成为合格专业疗育犬，帮助妥瑞症、亚斯伯格、情绪障碍及学习障碍的孩童认识自我、开发潜能。</p>
+<figure id="attachment_12257366" aria-describedby="caption-attachment-12257366" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/eb49c352a540c026655880793863175a.jpg"><img class="wp-image-12257366 size-large" src="https://i.epochtimes.com/assets/uploads/2020/07/eb49c352a540c026655880793863175a-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-12257366" class="wp-caption-text">训练<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E7%8A%AC.md#1">流浪犬</a>成为合格专业疗育犬，帮助妥瑞症、亚斯伯格、情绪障碍及学习障碍的孩童认识自我、开发潜能。（桃园青年事务局提供）</figcaption></figure>
+<p>台湾心辅犬培育团队于2019年7月成立，是全台唯一透过专业互动陪伴犬疗育银发与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E5%84%BF%E7%AB%A5.md#1">特殊儿童</a>的团队，负责人陈奕君说，团队从成立以来投入特殊儿童教育，对特殊孩童的协助不遗余力，这次与联新医院及唯妥社会企业公司共同合作，希望透过心辅犬互动教育，帮助特殊儿童发展未来。</p>
 <figure id="attachment_12257365" aria-describedby="caption-attachment-12257365" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/669bd9f5cb398350b23e5b9442c61120.jpg"><img class="wp-image-12257365 size-large" src="https://i.epochtimes.com/assets/uploads/2020/07/669bd9f5cb398350b23e5b9442c61120-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-12257365" class="wp-caption-text">训练流浪犬成为合格专业疗育犬，帮助妥瑞症、亚斯伯格、情绪障碍及学习障碍的孩童认识自我、开发潜能。（桃园青年事务局提供）</figcaption></figure>
 <p>联新国际医院薛常威医师说，许多成功名人如贾伯斯有阅读障碍、比尔盖兹被认为有“亚斯伯格”，但是他们的成就和影响力却撼动全世界。薛常威也说，特殊孩童可能拥有杰出的才能专长不该被埋没，需要社会多给予关怀支持与包容。心辅犬透过训练流浪犬成为疗育犬，陪伴银发与特殊儿童，促进其身心健康与复健治疗。</p>
 <p>流浪犬议题一直是台湾社会上巨大困扰，包含侵害野生动物领地与制造社会脏乱与疾病，心辅犬团队为了解决此一社会问题，藉由培训流浪犬，让流浪犬能在帮助人类同时也能拥有归属、获得良好照顾，减轻社会环境负担，团队以此教育理念推广“心辅犬互动陪伴计划”，同时减缓两个社会问题—流浪犬与教育，人与动物互惠互助。</p>
@@ -20,47 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/19/10/29/n11619453.md#1">特殊儿童个别化需求 视觉中心嘉惠病童和家长</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/20/4/25/n12060574.md#1">饿肚流浪犬趴军车讨食 士兵拉上车带回去操练</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/20/5/18/n12117597.md#1">人生是一连串的选择题 你的优先顺序是什么？</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/20/7/7/n12237754.md#1">跨界助妥瑞症、亚斯伯格症特殊儿童  开发潜能</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/20/7/7/n12238694.md#1">少年展力成果发表 埔里餐饮快闪店开幕</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/28/n13610435.md#1">2022桃园灯会闭幕不熄灯 河岸光续亮到5月</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/28/n13610041.md#1">桃园幼儿园群聚案再添5确诊 1678人采检出炉</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13608505.md#1">桃园暴增11例幼儿园案  传播链累计14染疫</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13608288.md#1">季新景点  客庄农游特色手作好好玩</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13607921.md#1">桃园杨梅警缉毒 侦破大麻栽种场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/29/n11619453.md#1">特殊儿童个别化需求 视觉中心嘉惠病童和家长</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/25/n12060574.md#1">饿肚流浪犬趴军车讨食 士兵拉上车带回去操练</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/18/n12117597.md#1">人生是一连串的选择题 你的优先顺序是什么？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/7/n12237754.md#1">跨界助妥瑞症、亚斯伯格症特殊儿童  开发潜能</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/7/n12238694.md#1">少年展力成果发表 埔里餐饮快闪店开幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680757.md#1">全台最大彩色海芋花海 与你芋见爱神</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680775.md#1">争取最佳好青年 身障青年比赞“我好棒！”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680378.md#1">2022桃捷挺桃猿  与Rakuten Girls一起“捷乘应猿”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680297.md#1">桃园老翁遭骗入会员 操作ATM遇警保老本</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680101.md#1">桃园大湳森林公园打造“都市绿洲”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/28/n11903759.md#1" target="_blank">朱镕基发言3分钟被打成右派20年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/21/n13594841.md#1">【未解之谜】梅辛传之四：权势抵不过天意</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/26/n13607632.md#1">【时事军事】特种部队 俄入侵乌克兰的秘密武器</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/28/n13612301.md#1">【远见快评】俄入侵闪电战失败 国际秩序重组</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/26/n13607072.md#1">【更新2.26】俄军遭遇后勤挑战与坚定抵抗</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13605832.md#1">保持心脏健康 营养师推荐在Costco买六种食物</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13608596.md#1">徐州铁链女事件持续发酵 中国金融圈怒了</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13605987.md#1">飞往上海开工 香港歌手许靖韵确诊染疫</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13607417.md#1">《维京传奇：英灵神殿》影评：复仇成功 只是挑战的开始</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13605795.md#1">羽绒衣手洗更长寿！5个清洗技巧常保如新</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/26/n13606670.md#1">每个人在选择油漆颜色时都会犯的6个错误</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kvokyz384/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kvokyz384/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/15/n12257361.htm">培训流浪犬开发特殊儿童潜能  桃园新创团队赞</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/15/n12257361.htm">培训流浪犬开发特殊儿童潜能  桃园新创团队赞</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kvokyz384/djy/blob/master/gb/20/7/15/n12257361.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kvokyz384/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kvokyz384/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kvokyz384/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/7/15/n12257361.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
